load single history list

--- a/app/index.html
+++ b/app/index.html
@@ -210,6 +210,10 @@
   firebase.initializeApp(config);
 </script>
 <!-- build:js scripts/main.min.js -->
+<!--<script src="scripts/jquery.min.js"></script>
+<script src="scripts/jquery-dateFormat.min.js"></script>
+<script src="scripts/lodash.min.js"></script>
+<script src="scripts/material.min.js"></script>-->
 <script src="scripts/main.min.js"></script>
 <!-- endbuild -->
 
