--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,16 @@
   <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
   <meta name="theme-color" content="#2F3BA2">
+
+  <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="styles/material.indigo-pink.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Your styles -->
   <link rel="stylesheet" href="styles/main.css">
+  <!--<link rel="stylesheet" href="styles/material.indigo-pink.min.css">-->
 
 </head>
 <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
@@ -66,10 +71,11 @@
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">OneToNine</span>
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="#fixed-tab-1">Sign in</a>
-
       <!--IF USER LOGIN && ONLINE-->
       <a class="mdl-navigation__link" href="#fixed-tab-2" hidden id="sign-out">Sign out</a>
+      <a class="mdl-navigation__link" href="https://github.com/tuongle106/pwatl">Git</a>
+      <a class="mdl-navigation__link">Rate</a>
+      <a class="mdl-navigation__link" href="#fixed-tab-1">About</a>
     </nav>
   </div>
   <main class="mdl-layout__content">
@@ -118,9 +124,35 @@
         </div>
         <!--/GAME BOARD-->
 
-        <div hidden class="mdl-card mdl-cell mdl-cell--12-col history-section" id="single-history-section">
-          <ul class="demo-list-two mdl-list" id="history-list">
-          </ul>
+        <div class="mdl-card mdl-cell mdl-cell--12-col history-section" id="single-history-section">
+          <div class="demo-list-two mdl-list">
+            <span class="mdl-list__item-primary-content">
+              <span>Histories</span>
+            </span>
+            <span class="mdl-list__item-secondary-content">
+              <span class="mdl-list__item-secondary-action">
+                <i class="icon material-icons">mood</i>
+              </span> Win
+            </span>
+            <span class="mdl-list__item-secondary-content">
+              <span class="mdl-list__item-secondary-action">
+                <i class="icon material-icons">mood_bad</i>
+              </span> Lose
+            </span>
+            <span class="mdl-list__item-secondary-content">
+              <span class="mdl-list__item-secondary-action">
+                <i class="icon material-icons">sync_disabled</i>
+              </span> Local Store
+            </span>
+            <span class="mdl-list__item-secondary-content">
+              <span class="mdl-list__item-secondary-action">
+                <i class="icon material-icons">sync</i>
+              </span> Sync-ed
+            </span>
+            <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active" id="progress-bar-history" style="float: right;"></div>
+          </div>
+          <div class="demo-list-two mdl-list" id="history-list">
+          </div>
         </div>
       </div>
     </section>
@@ -137,6 +169,7 @@
     <button class="mdl-snackbar__action" type="button"></button>
   </div>
 </div>
+<script src="scripts/main.min.js"></script>
 
 <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
 <script>
@@ -151,7 +184,6 @@
   };
   firebase.initializeApp(config);
 </script>
-<script src="scripts/main.min.js"></script>
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
