--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-dateFormat/1.0/jquery.dateFormat.min.js"></script>
 
   <!-- Your styles -->
   <link rel="stylesheet" href="styles/main.css">
@@ -51,9 +52,12 @@
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable
                   mdl-textfield--floating-label mdl-textfield--align-right">
         <div class="mdl-list__item">
-          <span class="mdl-list__item-primary-content" id="sign-in">
-            <img class="avatar" alt="avatar" src="images/profile_placeholder.png">
-          </span>
+          <div class="material-icons mdl-badge mdl-badge--overlap" data-badge="♥" id="sign-in"
+               style="font-size: 30px;color: aliceblue;">account_box
+          </div>
+          <!-- <span class="mdl-list__item-primary-content" id="sign-in">
+             <img class="avatar" alt="avatar" src="images/profile_placeholder.png">
+           </span>-->
 
           <span class="mdl-list__item-primary-content" hidden id="profile-container">
             <img class="avatar" alt="avatar" id="user-pic">
@@ -66,6 +70,7 @@
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
       <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Single play</a>
       <a href="#fixed-tab-2" class="mdl-layout__tab">Multiple play</a>
+      <a href="#fixed-tab-3" class="mdl-layout__tab">How To play<span id="new-comer" class="mdl-badge" data-badge="*"></span></a>
     </div>
   </header>
   <div class="mdl-layout__drawer">
@@ -166,17 +171,33 @@
         </div>
       </div>
     </section>
+    <section class="mdl-layout__tab-panel" id="fixed-tab-3">
+      <div class="page-content"><!-- Your content goes here -->
+        <div class="mdl-card mdl-cell mdl-cell--12-col">
+          <h1>How to play</h1>
+          <h4>#OneToNine</h4>
+          <span>Numbers from 1 to 9 (129) will appear in increasing order in the boxes randomly. <br/>
+            To beat this game, you will need to remember the order and location of the numbers as they appear,
+            then click on the boxes in the exact same order as they appeared!<br/>
+            Keep in mind that for each round, you will only have <strong>6 seconds to remember</strong> the details.</span>
+        </div>
+      </div>
+    </section>
   </main>
   <div id="show-snackbar-button" class="mdl-js-snackbar mdl-snackbar">
     <div class="mdl-snackbar__text" style="text-align: center"></div>
     <button class="mdl-snackbar__action" type="button"></button>
   </div>
   <button id="play-button"
-    class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored float-button-right">
+          class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored float-button-right">
     <i class="material-icons">play_arrow</i></button>
-  <button id="replay-button"
-    class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored float-button-left">
-    <i class="material-icons">replay</i></button>
+  <button id="replay-button" hidden
+          class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored float-button-left"
+          style="text-align: center;font-size: large;">6s
+    <div class="mdl-spinner mdl-spinner--single-color mdl-js-spinner is-active"
+         style="bottom: 35px;left: -15px;height: 56px;width: 56px;"></div>
+  </button>
+  <!--<i class="material-icons">replay</i></button>-->
 </div>
 
 <script src="scripts/main.min.js"></script>
