update README add about info

--- a/app/index.html
+++ b/app/index.html
@@ -70,20 +70,26 @@
     <div class="mdl-layout__tab-bar mdl-js-ripple-effect">
       <a href="#fixed-tab-1" class="mdl-layout__tab is-active">Single play</a>
       <a href="#fixed-tab-2" class="mdl-layout__tab">Multiple play</a>
-      <a href="#fixed-tab-3" class="mdl-layout__tab">How To play<span id="new-comer" class="mdl-badge" data-badge="*"></span></a>
+      <a href="#fixed-tab-3" class="mdl-layout__tab">How To play<span id="new-comer" class="mdl-badge"
+                                                                      data-badge="*"></span></a>
     </div>
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">OneToNine</span>
+
     <nav class="mdl-navigation">
       <!--IF USER LOGIN && ONLINE-->
       <a class="mdl-navigation__link" href="#fixed-tab-2" hidden id="sign-out">
         <i class="material-icons">power_settings_new</i> Sign out</a>
       <a class="mdl-navigation__link" href="#fixed-tab-1">
         <i class="material-icons">star</i> Rate</a>
-      <a class="mdl-navigation__link" href="#fixed-tab-1">
+      <a class="mdl-navigation__link" href="https://github.com/tuongle106/pwatl">
         <i class="material-icons">import_contacts</i> About</a>
     </nav>
+    <div class="mdl-layout-spacer"></div>
+    <span style="margin: 15px;">developed by <a href="https://github.com/tuongle106">tuongle106♥</a>
+      </span>
+
   </div>
   <main class="mdl-layout__content">
     <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
